--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <img class="header-img" src ="imagenes/banner.png" alt="ARC"/>
-        <div class="MainTitle"><h1 id="Title">Compilación Talleres</h1></div>
+        <div class="MainTitle"><h1 id="Title">Compilación Talleres - Luis Hernández Salazar</h1></div>
 	</header>
     
         <div class="row">
